[project]
name = "claude-task"
version = "0.1.0"
description = "MCP task scheduler server (watcher + queue + worker)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "sqlalchemy>=2.0.36",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
